cabal-version: 2.2
name:
  hinit
version:
  0.1
synopsis:
  opinionated haskell project scaffolder
description:
  opinionated (no configuration) haskell project scaffolder (for chessai)
bug-reports:
  https://github.com/chessai/hinit.git
license:
  MIT
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
build-type:
  Simple
extra-source-files:
  changelog.md
  readme.md

executable hinit
  main-is:
    Main.hs
  build-depends:
    , base >= 4.12 && < 4.15
    , neat-interpolation ^>= 0.3
    , text ^>= 1.2
    , directory ^>= 1.3
    , filepath ^>= 1.4
  default-language:
    Haskell2010
